Colaboratory を使用して作成しました

--- a/NL2ML_03.ipynb
+++ b/NL2ML_03.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "NL2ML_03.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMZTo6Fg5ToAr6E0x4ziHgv",
+      "authorship_tag": "ABX9TyPmhW1oSOnvEMTpRjpBqHst",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,6 +27,19 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "h4enin0c80Wc",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "import math"
+      ],
+      "execution_count": 20,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "zr0sfUXB-sm4",
         "colab_type": "code",
         "colab": {}
@@ -34,16 +47,28 @@
       "source": [
         "def tor_func(x):\n",
         "  w = [1.0, 1.0, 1.0]\n",
-        "  theta = 1\n",
+        "  theta = 0.5\n",
         "  h = 0\n",
         "  for i in range(3):\n",
         "    h = h + x[i] * w[i]\n",
-        "  if h > theta:\n",
-        "    return 1\n",
-        "  else:\n",
-        "    return 0"
+        "  h = h - theta\n",
+        "  return sigmoid(h)"
       ],
-      "execution_count": 3,
+      "execution_count": 21,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "cnBc6f6-84cm",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def sigmoid(h):\n",
+        "  return 1 / (1 + math.e**-h)"
+      ],
+      "execution_count": 25,
       "outputs": []
     },
     {
@@ -53,19 +78,19 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 35
+          "height": 34
         },
-        "outputId": "d23135e0-5c42-49ad-8f0c-cfe2a6d897ef"
+        "outputId": "49a72025-8eef-4477-f700-853c73228b83"
       },
       "source": [
         "print(tor_func([1,0,0]))"
       ],
-      "execution_count": 6,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "0\n"
+            "0.6224593312018546\n"
           ],
           "name": "stdout"
         }
